...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <Button
            android:id="@+id/mainactivity_connect"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/connection"/>

...
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Inscription"/>

        <Button
            android:id="@+id/activity_main_debug"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
...
