...
                android:inputType="textPassword"/>


        </LinearLayout>

        <CheckBox
            android:id="@+id/loginScreen_EnregistrerInfos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/garderInfoConnect"/>

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connection"/>

        <Button
            android:id="@+id/loginScreen_ResetPass"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/boutonReset"/>

...
