...
    <string name="Retour">Retour</string>
    <string name="ImageConnexion">Icon de l\'application</string>
    <string name="InternetError">Impossible de se connecter à Internet</string>
    <string name="InternetAcessError">Pas d\'acces à internet</string>
    <string name="URL_Crous">http://www.crous-lorraine.fr/restaurant/technopole/</string>
    <string name="URL_Inscription">http://10.0.2.2:8089/bonApp/inscription</string>
    <string name="URL_ResetPassword">http://10.0.2.2:8089/bonApp/ResetPass</string>
    <string name="mot_de_passe">Mot de Passe</string>
</resources>

